# swift_comet_pipeline

./: .gitignore  1.5_make_orbital_data.py  1.5_mark_comet_centers.py  1.75_orbit_plot.py  1_observation_log.py  2_identify_epochs.py  2_identify_stacking_groups.py  2_image_stacking.py  2_new_stuff.py  2_stuff.py  3_image_stacking.py  3_oh_from_stacks.py  3_veto_epoch.py  4_oh_from_stacks.py  50_pipeline_product_status.py  5_image_stacking.py  6_background.py  6_oh_from_stacks.py  7_apdraw.py  7_q_vs_r.py  8_q_from_profile.py  98_sun.py  99_etc.py  99_testing.py  CITATION.cff  README.md  __init__.py  aperture_photometry.py  coincidence_correction.py  comet_profile.py  comet_signal.py  config.yaml  configs.py  determine_background.py  effective_areas.py  environment.yml  epoch_time_window.py  epochs.py  fluorescence_OH.py  flux_OH.py  (+38 more)
data/: comet_orbital_data_horizons.csv  data_sources.txt  earth_orbital_data_horizons.csv  horizons_catalina_perihelion.txt  horizons_orbital_data.csv
data/fluorescence/: Schleicher_Ahearn_1988_Table5.csv  fluorescenceOH.txt  fluorescence_OH.csv
data/not_used/: swift_effective_area_uvv.csv  swift_effective_area_uw1.csv
data/solar_spectra/: sorce_ssi_l3.csv  sorce_ssi_l3_small.csv  sun_1A.csv
data/swift_effective_areas/: ubb.arf  uvv.arf  uvw1.arf  (+1 more)
deprecated/: 1.5_make_orbital_data.py  1_observation_log.py  2_identify_epochs.py  50_pipeline_product_status.py  5_image_stacking.py  6_background.py  6_oh_from_stacks.py  7_q_vs_r.py  99_etc.py  afrho.py  mark_comet_centers.py  show_vectorial_lightcurves.py  sun_direction.py  utils_inspect_epoch.py
notebooks/: Bayesian Aperture Analysis.ipynb  solar_spectra_and_beta.ipynb
(+320 files in other folders)
