[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "swift_comet_pipeline"
version = "0.0.1"
authors = [
    { name="Shawn Oset", email="szo0032@auburn.edu" }
]
description = "Data reduction pipeline for determining water production rates from the Swift telescope's UVOT images"
classifiers = ["Programming Language :: Python :: 3",]
readme = "README.md"
license = "LICENSE"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
